--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "attila": "github:zutrinken/attila#1.13.0",
     "bleak": "github:zutrinken/bleak#1.4.0",
     "casper": "github:tryghost/Casper#3.0.4",
-    "ghost": "^3.2.0",
+    "ghost": "^3.41.8",
     "ghost-storage-adapter-s3": "^2.8.0",
     "ghost-storage-cloudinary": "^2.0.2",
     "ghost-webdav-storage-adapter": "^0.3.5",
     "london": "github:tryghost/london#1.0.0",
     "massively": "github:tryghost/massively#1.0.2",
+    "caffeine-theme": "github:kelyvin/caffeine-theme#v4.1.0",
     "mysql": "^2.17.1",
     "the-shell": "github:mityalebedev/The-Shell#v2.0.0",
     "vapor": "github:sethlilly/Vapor#v1.6.0",
