--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   "dependencies": {
     "attila": "github:zutrinken/attila#1.13.0",
     "bleak": "github:zutrinken/bleak#1.4.0",
+    "caffeine-theme": "github:vnextcoderblog/caffeine-theme#v4.1.2",
     "casper": "github:tryghost/Casper#3.0.4",
     "ghost": "^3.41.8",
     "ghost-storage-adapter-s3": "^2.8.0",
     "ghost-storage-cloudinary": "^2.0.2",
     "ghost-webdav-storage-adapter": "^0.3.5",
+    "liebling": "github:snathjr/liebling",
     "london": "github:tryghost/london#1.0.0",
-    "massively": "github:tryghost/massively#1.0.2",
-    "caffeine-theme": "github:vnextcoderblog/caffeine-theme#v4.1.2",
-    "mysql": "^2.17.1",
-    "the-shell": "github:mityalebedev/The-Shell#v2.0.0",
-    "vapor": "github:sethlilly/Vapor#v1.6.0",
-    "pico": "github:tryghost/pico",
     "lyra": "github:tryghost/lyra",
-    "liebling": "github:snathjr/liebling"
+    "massively": "github:tryghost/massively#1.0.2",
+    "mysql": "^2.17.1",
+    "pico": "github:tryghost/pico",
+    "prismjs": "^1.23.0",
+    "the-shell": "github:mityalebedev/The-Shell#v2.0.0",
+    "vapor": "github:sethlilly/Vapor#v1.6.0"
   },
   "engines": {
     "node": "10.X"
